--- a/access.html
+++ b/access.html
@@ -1,8 +1,1 @@
-<!doctype html>
-<html>
-<head><meta charset='utf-8'><title>Access</title></head>
-<body>
-<h1>Private Preview</h1>
-<p>Password page placeholder. Use password: <b>ccdemo</b></p>
-</body>
-</html>
+<!doctype html><html><head><meta charset='utf-8'><title>Access</title></head><body><h1>Private Preview</h1><p>Password page. Use: <b>ccdemo</b></p></body></html>
