--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<!doctype html>
-<html>
-<head><meta charset='utf-8'><title>ChessCheck.ai</title></head>
-<body>
-<h1>ChessCheck Preview Site</h1>
-<p>This is the rebuilt package. Upload these files to your GitHub repo root.</p>
-</body>
-</html>
+<!doctype html><html><head><meta charset='utf-8'><title>ChessCheck.ai</title></head><body><h1>Welcome to ChessCheck.ai</h1><p>Homepage placeholder content.</p></body></html>
