--- a/about.html
+++ b/about.html
@@ -1,1 +1,44 @@
-<!doctype html><html><head><meta charset='utf-8'><title>About</title></head><body><h1>About ChessCheck</h1><p>Background and mission statement.</p></body></html>
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>About — ChessCheck.ai</title>
+<link rel="stylesheet" href="assets/site.css">
+<script src="assets/gate.js"></script>
+</head><body>
+<div class="nav">
+  <div class="logo"><div class="mark"></div>ChessCheck.ai</div>
+  <div style="display:flex;gap:10px;align-items:center">
+    <a class="btn" href="index.html">Home</a>
+    <a class="btn" href="how-it-works.html">How it works</a>
+    <a class="btn" href="preview.html">Demo</a>
+    <a class="btn" href="about.html">About</a>
+  </div>
+</div>
+
+<section class="section">
+  <h2>About</h2>
+  <p>ChessCheck.ai gives every player access to elite analysis. Upload your game, choose depth and get a clean report. No special hardware. No hassle.</p>
+  <p>Our stack is designed for reliability and privacy. Jobs route to decentralized compute when enabled. You keep your results.</p>
+  <div class="card">
+    <strong>Technology</strong>
+    <ul>
+      <li>Engines: Stockfish and Lc0</li>
+      <li>Payments: Stripe (preview), USDC at launch</li>
+      <li>Compute: HyperCycle decentralized AI nodes</li>
+    </ul>
+  </div>
+</section>
+
+<div class="footer">
+  <div class="grid2">
+    <div>
+      <strong>ChessCheck.ai</strong><br>
+      <small>Chess intelligence, powered by the Internet of AI.</small>
+      <div style="margin-top:8px"><small>Powered by HyperCycle’s Internet of AI global compute network.</small></div>
+    </div>
+    <div>
+      <small>Secure payments by Stripe (preview). USDC support coming soon.</small><br>
+      <small>Contact: hello@chesscheck.ai</small>
+    </div>
+  </div>
+</div>
+</body></html>
