--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-<!doctype html><html><head><meta charset='utf-8'><title>ChessCheck.ai</title></head><body><h1>Welcome to ChessCheck.ai</h1><p>Homepage placeholder content.</p></body></html>
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>ChessCheck.ai — Elite Chess Engine Power. On Demand.</title>
+<link rel="stylesheet" href="assets/site.css">
+<script src="assets/gate.js"></script>
+</head><body>
+<div class="nav">
+  <div class="logo"><div class="mark"></div>ChessCheck.ai</div>
+  <div style="display:flex;gap:10px;align-items:center">
+    <a class="btn" href="index.html">Home</a>
+    <a class="btn" href="how-it-works.html">How it works</a>
+    <a class="btn" href="preview.html">Demo</a>
+    <a class="btn" href="about.html">About</a>
+  </div>
+</div>
+
+<section class="hero">
+  <div class="kicker">Chess intelligence, powered by the Internet of AI</div>
+  <h1>Elite chess engine power. On demand.</h1>
+  <p class="sub">Upload your game and get pro level analysis with deep engines and clean visual reports. No hardware stress. Pay with USDC. Built on decentralized AI compute.</p>
+  <div class="ctas">
+    <a href="preview.html" class="btn primary">Start your analysis (demo)</a>
+    <a href="how-it-works.html" class="btn">How it works</a>
+  </div>
+  <div class="strip">
+    <div class="badge">🔒 SSL Secure</div>
+    <div class="badge">💳 Stripe Ready</div>
+    <div class="badge">🧠 HyperCycle powered</div>
+  </div>
+</section>
+<section class="section">
+  <h2>Why ChessCheck</h2>
+  <div class="steps">
+    <div class="card"><h3>Fast</h3><p>GPU-backed engines return deep evaluations quickly so you can prepare smarter.</p></div>
+    <div class="card"><h3>Accurate</h3><p>Stockfish and Lc0 options with depth controls and clean annotations.</p></div>
+    <div class="card"><h3>Simple</h3><p>Upload PGN or paste FEN. Choose depth. Get a report you can trust.</p></div>
+    <div class="card"><h3>Private</h3><p>Your games are processed securely. Results are yours to keep.</p></div>
+  </div>
+</section>
+<section class="section">
+  <div class="card notice">
+    <strong>Coming soon.</strong> We’re inviting early players. Leave your email on the demo screen to get first access.
+  </div>
+</section>
+
+<div class="footer">
+  <div class="grid2">
+    <div>
+      <strong>ChessCheck.ai</strong><br>
+      <small>Chess intelligence, powered by the Internet of AI.</small>
+      <div style="margin-top:8px"><small>Powered by HyperCycle’s Internet of AI global compute network.</small></div>
+    </div>
+    <div>
+      <small>Secure payments by Stripe (preview). USDC support coming soon.</small><br>
+      <small>Contact: hello@chesscheck.ai</small>
+    </div>
+  </div>
+</div>
+</body></html>
