--- a/preview.html
+++ b/preview.html
@@ -1,1 +1,80 @@
-<!doctype html><html><head><meta charset='utf-8'><title>Preview</title></head><body><h1>Engine Preview</h1><p>Here is where analysis results would be shown.</p></body></html>
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Demo — ChessCheck.ai</title>
+<link rel="stylesheet" href="assets/site.css">
+<script src="assets/gate.js"></script>
+<script>
+function submitDemo(e){
+  e.preventDefault();
+  document.getElementById('result').innerHTML = `
+    <div class="card">
+      <h3>Thanks — your game is queued.</h3>
+      <p>This is a preview. In the live version your analysis will run on GPU nodes and return an annotated PGN and visual PDF.</p>
+      <p><a href="assets/sample.pgn" download>Download sample PGN</a> · <a href="assets/sample-report.pdf" target="_blank">View sample PDF</a></p>
+      <div style="margin-top:10px">
+        <label>Get notified at launch</label>
+        <input class="input" type="email" placeholder="you@domain.com">
+      </div>
+    </div>`;
+}
+</script>
+</head><body>
+<div class="nav">
+  <div class="logo"><div class="mark"></div>ChessCheck.ai</div>
+  <div style="display:flex;gap:10px;align-items:center">
+    <a class="btn" href="index.html">Home</a>
+    <a class="btn" href="how-it-works.html">How it works</a>
+    <a class="btn" href="preview.html">Demo</a>
+    <a class="btn" href="about.html">About</a>
+  </div>
+</div>
+
+<section class="section">
+  <h2>Demo</h2>
+  <div class="grid2">
+    <form class="card" onsubmit="submitDemo(event)">
+      <label>Upload PGN</label>
+      <input class="input" type="file" accept=".pgn">
+      <label style="margin-top:12px">Or paste FEN</label>
+      <input class="input" type="text" placeholder="FEN string">
+      <label style="margin-top:12px">Engine</label>
+      <select class="input">
+        <option>Stockfish (CPU)</option>
+        <option>Lc0 (GPU)</option>
+      </select>
+      <label style="margin-top:12px">Depth</label>
+      <select class="input">
+        <option>Fast</option>
+        <option>Deep</option>
+        <option>Extreme</option>
+      </select>
+      <div style="margin-top:14px">
+        <button class="btn primary" type="submit">Submit (preview)</button>
+      </div>
+      <small>Payments disabled in preview.</small>
+    </form>
+    <div id="result" class="preview card">
+      <strong>What you’ll get</strong>
+      <p>An annotated PGN and a visual PDF report with evaluation graph, best-move suggestions and blunder highlights.</p>
+      <p><a href="assets/sample.pgn" download>Download sample PGN</a> · <a href="assets/sample-report.pdf" target="_blank">View sample PDF</a></p>
+    </div>
+  </div>
+  <div class="card notice" style="margin-top:16px">
+    This is a preview. Compute jobs will run when node routing is enabled.
+  </div>
+</section>
+
+<div class="footer">
+  <div class="grid2">
+    <div>
+      <strong>ChessCheck.ai</strong><br>
+      <small>Chess intelligence, powered by the Internet of AI.</small>
+      <div style="margin-top:8px"><small>Powered by HyperCycle’s Internet of AI global compute network.</small></div>
+    </div>
+    <div>
+      <small>Secure payments by Stripe (preview). USDC support coming soon.</small><br>
+      <small>Contact: hello@chesscheck.ai</small>
+    </div>
+  </div>
+</div>
+</body></html>
