--- a/how-it-works.html
+++ b/how-it-works.html
@@ -1,51 +1,1 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>How it works — ChessCheck.ai</title>
-<link rel="stylesheet" href="assets/site.css">
-<script src="assets/gate.js"></script>
-</head><body>
-<div class="nav">
-  <div class="logo"><div class="mark"></div>ChessCheck.ai</div>
-  <div style="display:flex;gap:10px;align-items:center">
-    <a class="btn" href="index.html">Home</a>
-    <a class="btn" href="how-it-works.html">How it works</a>
-    <a class="btn" href="preview.html">Demo</a>
-    <a class="btn" href="about.html">About</a>
-  </div>
-</div>
-
-<section class="section">
-  <h2>How it works</h2>
-  <div class="steps">
-    <div class="card"><h3>1. Upload</h3><p>Upload a PGN or paste a FEN. You can also add a link from your favorite platform.</p></div>
-    <div class="card"><h3>2. Choose depth</h3><p>Pick engine and depth. Stockfish for raw strength. Lc0 for neural style. Set time per move if you prefer.</p></div>
-    <div class="card"><h3>3. Run on AI compute</h3><p>Your job is routed to decentralized GPU nodes on HyperCycle. No hardware to manage.</p></div>
-    <div class="card"><h3>4. Get results</h3><p>Download an annotated PGN and a visual PDF with eval graphs and key moments.</p></div>
-  </div>
-</section>
-<section class="section">
-  <h2>Pricing (preview)</h2>
-  <div class="steps">
-    <div class="card"><h3>Starter</h3><p>5 analyses — $9</p></div>
-    <div class="card"><h3>Club</h3><p>25 analyses — $35</p></div>
-    <div class="card"><h3>Prep Pro</h3><p>100 analyses — $99</p></div>
-    <div class="card"><h3>GM Deep Time</h3><p>Neural long runs — $19 per run</p></div>
-  </div>
-  <small>Stripe checkout is disabled in preview. USDC support coming at launch.</small>
-</section>
-
-<div class="footer">
-  <div class="grid2">
-    <div>
-      <strong>ChessCheck.ai</strong><br>
-      <small>Chess intelligence, powered by the Internet of AI.</small>
-      <div style="margin-top:8px"><small>Powered by HyperCycle’s Internet of AI global compute network.</small></div>
-    </div>
-    <div>
-      <small>Secure payments by Stripe (preview). USDC support coming soon.</small><br>
-      <small>Contact: hello@chesscheck.ai</small>
-    </div>
-  </div>
-</div>
-
-</body></html>
+<!doctype html><html><head><link rel='stylesheet' href='assets/site.css'><script src='assets/gate.js'></script></head><body><div class="nav"><a href="index.html">Home</a><a href="how-it-works.html">How it works</a><a href="preview.html">Demo</a><a href="about.html">About</a></div><div class='section'><h2>How it works</h2><p>Upload PGN → Choose depth → Run on AI compute → Get results</p></div><div class="section"><small>ChessCheck.ai • Powered by HyperCycle</small></div></body></html>
