--- a/index.html
+++ b/index.html
@@ -1,46 +1,1 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ChessCheck.ai — Elite Chess Engine Power. On Demand.</title>
-<link rel="stylesheet" href="assets/site.css">
-<script src="assets/gate.js"></script>
-</head><body>
-<div class="nav">
-  <div class="logo"><div class="mark"></div>ChessCheck.ai</div>
-  <div style="display:flex;gap:10px;align-items:center">
-    <a class="btn" href="index.html">Home</a>
-    <a class="btn" href="how-it-works.html">How it works</a>
-    <a class="btn" href="preview.html">Demo</a>
-    <a class="btn" href="about.html">About</a>
-  </div>
-</div>
-
-<section class="hero">
-  <div class="kicker">Chess intelligence, powered by the Internet of AI</div>
-  <h1>Elite chess engine power. On demand.</h1>
-  <p class="sub">Upload your game and get pro level analysis with deep engines and clean visual reports. No hardware stress. Pay with USDC. Built on decentralized AI compute.</p>
-  <div class="ctas">
-    <a href="preview.html" class="btn primary">Start your analysis (demo)</a>
-    <a href="how-it-works.html" class="btn">How it works</a>
-  </div>
-  <div class="strip">
-    <div class="badge">🔒 SSL Secure</div>
-    <div class="badge">💳 Stripe Ready</div>
-    <div class="badge">🧠 HyperCycle powered</div>
-  </div>
-</section>
-
-<div class="footer">
-  <div class="grid2">
-    <div>
-      <strong>ChessCheck.ai</strong><br>
-      <small>Chess intelligence, powered by the Internet of AI.</small>
-      <div style="margin-top:8px"><small>Powered by HyperCycle’s Internet of AI global compute network.</small></div>
-    </div>
-    <div>
-      <small>Secure payments by Stripe (preview). USDC support coming soon.</small><br>
-      <small>Contact: hello@chesscheck.ai</small>
-    </div>
-  </div>
-</div>
-
-</body></html>
+<!doctype html><html><head><link rel='stylesheet' href='assets/site.css'><script src='assets/gate.js'></script></head><body><div class="nav"><a href="index.html">Home</a><a href="how-it-works.html">How it works</a><a href="preview.html">Demo</a><a href="about.html">About</a></div><div class='section'><h1>ChessCheck.ai</h1><p>Elite chess engine power. On demand.</p><a class='btn' href='preview.html'>Try Demo</a></div><div class="section"><small>ChessCheck.ai • Powered by HyperCycle</small></div></body></html>
